--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
@@ -2963,20 +2963,20 @@
       </form>
       <form id="product-list">
       	<field-visibility>
-      	  <show force="true" id="bcpg:legalName" />
+      	  <show force="true" id="cm:name"/>
+      	  <show force="true" id="gs1:descriptionShort"/>
+      	  <show force="true" id="gs1:functionalName"/>
+      	  <show force="true" id="cm:title"/>
+      	  <show force="true" id="gs1:variantDescription"/>
 		  <show force="true" id="bcpg:productHierarchy1" />
 		  <show force="true" id="bcpg:productHierarchy2" />
+		  <show force="true" id="bcpg:legalName" />
 		  <show force="true" id="bcpg:productState" />
 		  <show force="true" id="bcpg:code" />
 		  <show force="true" id="bcpg:erpCode"/>
 		  <show force="true" id="bcpg:eanCode" />
 		  <show force="true" id="bcpg:suppliers"  />
-      	  <show force="false" id="cm:name"/>
 		  <show force="false" id="bcpg:clients" />
-          <show force="false" id="gs1:descriptionShort"/>
-          <show force="false" id="gs1:functionalName"/>
-          <show force="false" id="cm:title"/>
-          <show force="false" id="gs1:variantDescription"/>
           <show force="false" id="bcpg:productComments"/>
           <show force="false" id="cm:description"/>
           <show force="false" id="bcpg:packagingDescription"/>
