--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-sfp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-sfp-form-config.xml
@@ -701,6 +701,30 @@
           <show force="true" id="bcpg:advPclValue1"/>
           <show force="true" id="bcpg:advPclPhysicoChem2"/>
           <show force="true" id="bcpg:advPclValue2"/>
+          <show force="true" id="bcpg:advLca"/>
+          <show force="true" id="bcpg:lcaListValue"/>
+          <show force="true" id="bcpg:advSvhcAnd"/>
+          <show force="true" id="bcpg:advSvhcNot"/>
+          <show id="survey:advSearchSurveyQuestion1" force="true" />
+		  <show id="survey:advSearchSurveyAnswer1" force="true" />
+		  <show id="survey:advSearchSurveyQuestion2" force="true" />
+		  <show id="survey:advSearchSurveyAnswer2" force="true" />
+		  <show id="survey:advSearchSurveyQuestion3" force="true" />
+		  <show id="survey:advSearchSurveyAnswer3" force="true" />
+		  <show id="survey:advSearchSurveyQuestion4" force="true" />
+		  <show id="survey:advSearchSurveyAnswer4" force="true" />
+		  <show id="survey:advSearchSurveyQuestion5" force="true" />
+		  <show id="survey:advSearchSurveyAnswer5" force="true" />
+		  <show id="survey:advSearchSurveyQuestion6" force="true" />
+		  <show id="survey:advSearchSurveyAnswer6" force="true" />
+		  <show id="survey:advSearchSurveyQuestion7" force="true" />
+		  <show id="survey:advSearchSurveyAnswer7" force="true" />
+		  <show id="survey:advSearchSurveyQuestion8" force="true" />
+		  <show id="survey:advSearchSurveyAnswer8" force="true" />
+		  <show id="survey:advSearchSurveyQuestion9" force="true" />
+		  <show id="survey:advSearchSurveyAnswer9" force="true" />
+		  <show id="survey:advSearchSurveyQuestion10" force="true" />
+		  <show id="survey:advSearchSurveyAnswer10" force="true" />
         </field-visibility>
         <appearance>
           <set appearance="bordered-panel" id="product-criteria" label-id="becpg.forms.set.product-criteria.label"/>
@@ -932,6 +956,182 @@
             	<control-param name="forceEditable">true</control-param>
             </control>
           </field>
+          <set appearance="bordered-panel" id="lca" label-id="becpg.forms.set.lca-criteria.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
+          <field id="bcpg:advLca" mandatory="false" read-only="false" set="lca">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+            </control>
+          </field>
+          <field id="bcpg:lcaListValue" mandatory="false" read-only="false" set="lca">
+            <control template="/org/alfresco/components/form/controls/numberrange.ftl">
+              <control-param name="forceEditable">true</control-param>
+            </control>
+          </field>
+          <set appearance="bordered-panel" id="svhc" label-id="becpg.forms.set.svhc-criteria.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
+          <field id="bcpg:advSvhcAnd" mandatory="false" read-only="false" set="svhc">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+            </control>
+          </field>
+          <field id="bcpg:advSvhcNot" mandatory="false" read-only="false" set="svhc">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+            </control>
+          </field>
+          <set appearance="bordered-panel" id="survey" label-id="becpg.forms.set.survey-criteria.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
+          <field id="survey:advSearchSurveyQuestion1" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer1" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion1</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyQuestion2" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer2" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion2</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyQuestion3" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer3" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion3</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyQuestion4" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer4" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion4</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyQuestion5" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer5" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion5</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyQuestion6" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer6" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion6</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyQuestion7" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer7" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion7</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyQuestion8" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer8" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion8</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyQuestion9" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer9" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion9</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyQuestion10" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+		  	  <control-param name="ds">becpg/autocomplete/survey</control-param>
+		  	  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
+		  <field id="survey:advSearchSurveyAnswer10" mandatory="false" read-only="false" set="survey">
+		  	<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+			  <control-param name="ds">becpg/autocomplete/survey</control-param>
+			  <control-param name="parentAssoc">survey_advSearchSurveyQuestion10</control-param>
+			  <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+		  	</control>
+		  </field>
         </appearance>
       </form>
       <form id="create">
@@ -1373,16 +1573,15 @@
       
       <form id="product-list">
         <field-visibility>
-          <show force="true" id="bcpg:legalName" />
-		  <show force="true" id="bcpg:productHierarchy1" />
+          <show force="true" id="cm:name"/>
+          <show force="true" id="cm:title"/>
+          <show force="true" id="bcpg:productHierarchy1" />
 		  <show force="true" id="bcpg:productHierarchy2" />
+          <show force="true" id="bcpg:legalName" />
 		  <show force="true" id="bcpg:productState" />
 		  <show force="true" id="bcpg:code" />
 		  <show force="true" id="bcpg:erpCode"/>
-		  <show force="true" id="bcpg:eanCode" />
 		  <show force="true" id="bcpg:suppliers"  />
-          <show force="false" id="cm:name"/>
-          <show force="false" id="cm:title"/>
           <show force="false" id="bcpg:productComments"/>
           <show force="false" id="cm:description"/>
           <show force="false" id="bcpg:packagingDescription"/>
