Fix #18751 - [Feature] Add precautions column for Decernis

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -10425,6 +10425,7 @@
 					<show id="bcpg:irlResultIndicator" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:irlSources" />
 				</field-visibility>
 			</form>
@@ -10436,6 +10437,7 @@
 					<show id="bcpg:irlResultIndicator" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:regulatoryComment" />
 					<show id="bcpg:irlSources" />
 				</field-visibility>
@@ -10467,6 +10469,7 @@
 					<show id="bcpg:irlResultIndicator" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:regulatoryComment" force="true" />
 					<show id="bcpg:irlSources" />
 					<show id="dataList_bcpg:reqCtrlList" />
@@ -10478,6 +10481,7 @@
 					<field id="bcpg:irlResultIndicator" read-only="true" />
 					<field id="bcpg:irlRestrictionLevels" read-only="true" />
 					<field id="bcpg:irlCitation" read-only="true" />
+					<field id="bcpg:irlPrecautions" read-only="true"/>
 					<field id="bcpg:regulatoryComment" read-only="true" />
 					<field id="bcpg:irlSources" read-only="true" />
 					<field id="dataList_bcpg:reqCtrlList" label-id="hidden" />
@@ -10495,6 +10499,7 @@
 					<show id="bcpg:irlResultIndicator" force="true" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:regulatoryComment" force="true" />
 				</field-visibility>
 				<appearance>
@@ -10503,6 +10508,7 @@
 					<field id="bcpg:irlResultIndicator" read-only="true" />
 					<field id="bcpg:irlRestrictionLevels" read-only="true" />
 					<field id="bcpg:irlCitation" read-only="true" />
+					<field id="bcpg:irlPrecautions" read-only="true" />
 					<field id="bcpg:regulatoryUsageRef" read-only="true" />
 					<field id="bcpg:regulatoryComment" read-only="true" />
 				</appearance>
