--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -11264,6 +11264,7 @@
 					<show id="bcpg:irlResultIndicator" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:irlSources" />
 				</field-visibility>
 			</form>
@@ -11275,6 +11276,7 @@
 					<show id="bcpg:irlResultIndicator" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:regulatoryComment" />
 					<show id="bcpg:irlSources" />
 				</field-visibility>
@@ -11306,6 +11308,7 @@
 					<show id="bcpg:irlResultIndicator" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:regulatoryComment" force="true" />
 					<show id="bcpg:irlSources" />
 					<show id="dataList_bcpg:reqCtrlList" />
@@ -11317,6 +11320,7 @@
 					<field id="bcpg:irlResultIndicator" read-only="true" />
 					<field id="bcpg:irlRestrictionLevels" read-only="true" />
 					<field id="bcpg:irlCitation" read-only="true" />
+					<field id="bcpg:irlPrecautions" read-only="true"/>
 					<field id="bcpg:regulatoryComment" read-only="true" />
 					<field id="bcpg:irlSources" read-only="true" />
 					<field id="dataList_bcpg:reqCtrlList" label-id="hidden" />
@@ -11334,6 +11338,7 @@
 					<show id="bcpg:irlResultIndicator" force="true" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:regulatoryComment" force="true" />
 				</field-visibility>
 				<appearance>
@@ -11342,6 +11347,7 @@
 					<field id="bcpg:irlResultIndicator" read-only="true" />
 					<field id="bcpg:irlRestrictionLevels" read-only="true" />
 					<field id="bcpg:irlCitation" read-only="true" />
+					<field id="bcpg:irlPrecautions" read-only="true" />
 					<field id="bcpg:regulatoryUsageRef" read-only="true" />
 					<field id="bcpg:regulatoryComment" read-only="true" />
 				</appearance>
