Fix #18751 - [Feature] Add precautions column for Decernis

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -9653,6 +9653,7 @@
 					<show id="bcpg:irlResultIndicator" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:irlSources" />
 				</field-visibility>
 			</form>
@@ -9660,8 +9661,13 @@
 				<field-visibility>
 					<show id="bcpg:irlIng" />
 					<show id="bcpg:regulatoryCountries" />
-					<show id="bcpg:irlResultIndicator" />	
-					<show id="bcpg:regulatoryUsageRef" />							
+					<show id="bcpg:irlUsages" />
+					<show id="bcpg:irlResultIndicator" />
+					<show id="bcpg:irlRestrictionLevels" />
+					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
+					<show id="bcpg:regulatoryComment" />
+					<show id="bcpg:irlSources" />							
 				</field-visibility>
 				<appearance>
 					<field id="bcpg:irlIng" >
@@ -9687,6 +9693,7 @@
 					<show id="bcpg:irlResultIndicator" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:regulatoryComment" force="true" />
 					<show id="bcpg:irlSources" />
 					<show id="dataList_bcpg:reqCtrlList" />
@@ -9698,6 +9705,7 @@
 					<field id="bcpg:irlResultIndicator" read-only="true" />
 					<field id="bcpg:irlRestrictionLevels" read-only="true" />
 					<field id="bcpg:irlCitation" read-only="true" />
+					<field id="bcpg:irlPrecautions" read-only="true"/>
 					<field id="bcpg:regulatoryComment" read-only="true" />
 					<field id="bcpg:irlSources" read-only="true" />
 					<field id="dataList_bcpg:reqCtrlList" label-id="hidden" />
@@ -9715,6 +9723,7 @@
 					<show id="bcpg:irlResultIndicator" force="true" />
 					<show id="bcpg:irlRestrictionLevels" />
 					<show id="bcpg:irlCitation" />
+					<show id="bcpg:irlPrecautions" />
 					<show id="bcpg:regulatoryComment" force="true" />
 				</field-visibility>
 				<appearance>
@@ -9723,6 +9732,7 @@
 					<field id="bcpg:irlResultIndicator" read-only="true" />
 					<field id="bcpg:irlRestrictionLevels" read-only="true" />
 					<field id="bcpg:irlCitation" read-only="true" />
+					<field id="bcpg:irlPrecautions" read-only="true" />
 					<field id="bcpg:regulatoryUsageRef" read-only="true" />
 					<field id="bcpg:regulatoryComment" read-only="true" />
 				</appearance>
